@@ -1,5 +1,6 @@
 2017-03-30  Pali Roh\'ar  <pali.rohar@gmail.com>
 
+	* ptexmac.h: remove duplicate macros.
 	* writet3.c (writet3): ensure fm is non-NULL before dereferencing.
 	* mapfile.c (check_fm_entry): omit check for is_reencoded, i.e.,
 	an .enc file. This way, each bitmap font is embedded separately,
